@@ -20,41 +20,18 @@
       /></a>
       <nav id="menu">
         <button id="closemenu">X</button>
-        <a href="#">incio</a>
-        <a href="#">produto</a>
-        <a href="#">sobre</a>
-        <a href="#">contato</a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="https://github.com/frevisto/hardstop" target="_blank">sobre nós</a>
+        <a href="#"></a>
       </nav>
     </header>
     <main>
-      <h1 class="titulo">Apresentação</h1>
-      <div class="conteudo">
-        <p>
-          Neste curso, embarcaremos juntos em uma jornada de descoberta,
-          explorando os princípios, práticas e aplicações do Scrum no
-          desenvolvimento de produtos e projetos. Seja você um novato curioso ou
-          um profissional experiente em busca de aprimoramento, este curso foi
-          cuidadosamente projetado para atender as necessidades de todos os
-          participantes.
-        </p>
-        <p>
-          Ao longo das próximas semanas, mergulharemos a fundo nos fundamentos
-          do Scrum, desde sua origem e valores até sua implementação prática em
-          ambientes de negócios reais e com a oportunidade de aprender com
-          especialistas da área.
-        </p>
-        <p>
-          Este curso não se trata apenas de adquirir conhecimento teórico, mas
-          também de desenvolver habilidades práticas que serão valiosas em sua
-          carreira profissional.<br>
-          Queremos capacitá-lo para se tornar um líder eficaz, capaz de
-          impulsionar a inovação, promover a colaboração e entregar valor ao
-          cliente de forma consistente.<br>
-          Então, prepare-se para uma jornada emocionante e desafiadora. Estamos
-          aqui para apoiá-lo em cada etapa do caminho e estamos animados para
-          ver o quanto você crescerá ao longo deste curso. Sem mais delongas,
-          vamos começar esta jornada rumo ao domínio do Scrum!<br>
-        </p>
+      <h1 class="titulo">BEM VINDO</h1>
+      <div id="texto_login">
+        Nós damos as boas vindas ao site da equipe HardStop onde ensinaremos <br>
+        para os trabalhadores, esquecidos e curiosos o processo de <br>
+        gestão ágil conhecido como SCRUM
       </div>
 
       <div id="login_field">
@@ -62,17 +39,19 @@
           <legend style="text-align: right">LOGIN</legend>
           <div>
             <input
+            style="height: 35px;"
+            size="35px"
               id="user_address"
               type="email"
               placeholder="Informe seu e-mail"
             />
           </div>
           <div style="padding-top: 3px">
-            <button type="submit" style="width: 50px;height: 20px;">OK</button>
+            <button type="submit" style="width: 65px;height: 30px;">OK</button>
           </div>
         </fieldset>
         <div style="text-align: center">
-          ou <a href="./pages/cadastro.html">cadastre-se</a>
+          ou <a href="./pages/cadastro.html" style="color: crimson; font-size: large;">cadastre-se</a>
         </div>
       </div>
 
