@@ -13,7 +13,7 @@
             <button id="closemenu">X</button>
             <a href="#">incio</a>
             <a href="#">produto</a>
-            <a href="https://github.com/frevisto/hardstop" target="_blank">sobre</a>
+            <a href="https://github.com/frevisto/hardstop" target="_blank">sobre nós</a>
             <a href="#">contato</a>
     
         </nav>
