@@ -22,7 +22,7 @@
         <button id="closemenu">X</button>
         <a href="#"></a>
         <a href="#"></a>
-        <a href="https://github.com/frevisto/hardstop" target="_blank">sobre</a>
+        <a href="https://github.com/frevisto/hardstop" target="_blank">sobre nós</a>
         <a href="#"></a>
       </nav>
     </header>
